fix low contrast ratio of foreground

--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ a {
 
 .btn--secondary {
   background: var(--color-secondary);
-  color: #fff;
+  color: #181818;
 }
 
 .btn--accent {
